[workspace]
resolver = "3"
members = ["examples/*", "packages/*"]

[workspace.dependencies]
rdml = { path = "./packages/rdml", version = "0.1.1" }
rdml_leptos = { path = "./packages/rdml_leptos", version = "0.1.1" }
syn = { version = "2.0.111", features = ["extra-traits", "full"] }
proc-macro2 = "1.0.104"
